[package]
authors = ["Till Hoeppner <till@hoeppner.ws>"]
description = "IRC log converter/collector/cruncher"
homepage = "https://github.com/tilpner/ilc"
license = "Apache-2.0"
name = "ilc"
repository = "https://github.com/tilpner/ilc"
version = "0.2.0"

[[bin]]
name = "ilc"
doc = false

[dependencies]
# ilc-cli = "*"
ilc-cli = { path = "cli" }

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
