[package]
authors = ["Till Hoeppner <till@hoeppner.ws>"]
description = "IRC log converter/collector/cruncher"
license = "Apache-2.0"
name = "ilc"
repository = "https://github.com/tilpner/ilc"
version = "0.2.0"

[[bin]]
name = "ilc"
doc = false

[dependencies]
ilc-cli = "0.1.0"
ilc-base = "0.1.0"
ilc-ops = "0.1.0"
ilc-format-weechat = "0.1.0"
ilc-format-energymech = "0.1.0"

[profile.release]
debug = true
debug-assertions = false
# lto = true
opt-level = 3
