[package]
authors = ["Till Hoeppner <till@hoeppner.ws>"]
description = "IRC log converter/collector/cruncher"
license = "BSD-3-Clause"
name = "ilc"
repository = "https://github.com/tilpner/ilc"
version = "0.3.0"
build = "build.rs"
exclude = [".cargo/**"]

[[bin]]
name = "ilc"
doc = false

[dependencies]
ilc-cli = "~0.1"
ilc-base = "~0.2"
ilc-ops = "~0.1"
ilc-format-weechat = "~0.2"
ilc-format-energymech = "~0.2"

[dev-dependencies]
flate2 = "~0.2"

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
