[package]
name = "ilc-base"
version = "0.1.0"
description = "IRC log converter/collector/cruncher"
homepage = "https://github.com/tilpner/ilc"
license = "Apache-2.0"
repository = "https://github.com/tilpner/ilc"
authors = ["Till Höppner <till@hoeppner.ws>"]

[dependencies]
log = "0.3.5"
chrono = "0.2.19"
rustc-serialize = "0.3.18"
