[package]
name = "ilc-ops"
version = "0.1.2"
description = "IRC log converter/collector/cruncher"
homepage = "https://github.com/tilpner/ilc"
license = "Apache-2.0"
repository = "https://github.com/tilpner/ilc"
authors = ["Till Höppner <till@hoeppner.ws>"]

[dependencies]
log = "0.3.5"
chrono = "0.2.19"
ilc-base = "~0.2"
blist = "0.0.4"
bit-set = "0.3.0"
serde = "~0.7"
